# quantiphy_eval

./: .bump.cfg  .bump.cfg.nt  .coveragerc  .gitignore  .travis.yml  LICENSE  README.rst  clean  pyproject.toml  quantiphy_eval.py  setup.py  test_qeval.py  tox.ini
.github/workflows/: build.yaml
examples/: qe
quantiphy_eval/: __init__.py  main.py
src/: quantiphy_eval.py
tests/: test_qeval.py
